<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".fragments.PhoneNumberFragment">

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/get_otp"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:fontFamily="@font/gilroy_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/gilroy_extrabold"
        android:text="@string/enter_your_phone_number"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1" />

    <EditText
        android:id="@+id/et_country_code"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/outline"
        android:enabled="false"
        android:fontFamily="@font/gilroy_semibold"
        android:gravity="center"
        android:textColor="@color/colorBlack"

        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/et_mobile"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/outline"
        android:enabled="false"
        android:fontFamily="@font/gilroy_semibold"
        android:paddingHorizontal="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintStart_toEndOf="@id/et_country_code"
        app:layout_constraintTop_toBottomOf="@id/text2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue_mobile_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorYellow"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        android:text="@string/continue_string"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:fontFamily="@font/gilroy_extrabold"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_country_code" />

    <ProgressBar
        android:id="@+id/phone_fragment_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>